Issue #807 GUI coloring alignments by bisulfite mode (#815)
* bisulfite color mode for bam track

* fix items

* update algrothm for bases, added cytosine mismatches

* added comments, removed unnecessary parts

--- a/client/client/app/components/ngbTracksView/ngbTrackSettings/ngbTrackSettings.scss
+++ b/client/client/app/components/ngbTracksView/ngbTrackSettings/ngbTrackSettings.scss
@@ -71,3 +71,8 @@ a:hover {
     margin-bottom: 8px;
   }
 }
+
+.subfield-text {
+  font-size: 14px;
+  color: rgba(0,0,0,0.87);
+}
